--- a/COMPANHIAS/css/style.css
+++ b/COMPANHIAS/css/style.css
@@ -214,20 +214,16 @@ table tbody{
     text-align: center;
 }
 
-.tabelaWhite tr td img{
+/*.tabelaWhite tr td img{
     border-radius: 10px 20px ;
     width: 90%;
-}
+}*/
 
 .imagemfrota{
     width: 90%;
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-tr, td{
-    width: 100%;
 }
 
 
