--- a/COMPANHIAS/css/style.css
+++ b/COMPANHIAS/css/style.css
@@ -238,8 +238,20 @@ table tbody{
     text-align: center;
 }
 
+.tabelacont td {
+    padding-bottom: 3%;
+}
+
 .imagemfrota{
     width: 90%;
+    display: block;
+    border-radius: 10px 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.imagemFrotaSevenair{
+    width: 75%;
     display: block;
     border-radius: 10px 20px;
     margin-left: auto;
