--- a/COMPANHIAS/css/style.css
+++ b/COMPANHIAS/css/style.css
@@ -280,19 +280,80 @@ table tbody{
     margin-right: auto;
 }
 
-.glosario h2{
+/*.glosario h2{
     font-size: 1em;
-}
+}*/
+
+
+
+button {
+    text-align: center;
+    position: relative;
+    display:block;
+    height: 45px;
+    width: 150px;
+    margin: 10px 7px;
+    padding: 5px 5px;
+    font-weight: 700;
+    font-size: 15px;
+    letter-spacing: 2px;
+    color: #383736;
+    border: 2px #383736 solid;
+    border-radius: 4px;
+    text-transform: uppercase;
+    outline: 0;
+    overflow: hidden;
+    background: none;
+    z-index: 1;
+    cursor: pointer;
+    transition: 0.08s ease-in;
+    -o-transition: 0.08s ease-in;
+    -ms-transition: 0.08s ease-in;
+    -moz-transition: 0.08s ease-in;
+    -webkit-transition: 0.08s ease-in;
+  }
 
 #centralizar{
-    background-color: #e22828b9;
-    border-radius: 5%;
-
-
-    position:absolute;
-    left:50%;
-    transform: translate(-50%);
+    background-color: #64BCE8;
+    position: absolute;
+    padding-bottom: 18px;
+    left: 44%;
+    bottom: -189%;
+    text-align: center;
+    box-shadow: 5px 4px 9px #0e49667d;
 }
 
+#centralizar:after{
+    content: "Leia Mais";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0%;
+    text-align: center;
+    -webkit-transition: all 400ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+}
 
+#centralizar:before{
+    content: "Leia Mais";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: -100%;
+    opacity: 0;
+    -webkit-transition: all 500ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+}
 
+#centralizar:hover {
+    background: #0e4966d7;
+}
+
+#centralizar:hover:before {
+    left: 0;
+    opacity: 1;
+    color: #fff;
+}
+  
+#centralizar:hover:after {
+    left: 100%;
+    opacity: 0;
+}
