--- a/css/loja.css
+++ b/css/loja.css
@@ -13,8 +13,21 @@
     width: 7%;
 }
 
-#produtos, #carrinho{
+#produtos{
     max-width: 900px;
     margin: 0 auto;
-    padding:0 2%
+    padding:0 2%;
+    display: flex;
+}
+
+#carrinho{
+    max-width: 900px;
+    margin: 0 auto;
+    padding:0 2%;
+    display: block;
+}
+
+.produto-sigle{
+    width: 33.3%;
+    padding-bottom: 0 20px;
 }
