--- a/css/loja.css
+++ b/css/loja.css
@@ -1,3 +1,10 @@
+*{
+    font-family: montserrat, sans-serif;
+    margin: 0;
+    padding: 0; 
+    box-sizing: border-box;
+}
+
 #setainicio{
     text-decoration: none;
 }
@@ -28,6 +35,24 @@
 }
 
 .produto-sigle{
-    width: 33.3%;
-    padding-bottom: 0 20px;
+    width: 32%;
+    margin-right: 1%;
+    border: 1px solid #ccc;
+    margin: 20px 0;
+}
+
+.produto-sigle img{
+    max-width: 100%;
+}
+
+h1{
+    font-weight: 700;
+    font-size: 2.3em;
+    background-color: #6ea3dae3;
+    text-align: center;
+}
+
+h2{
+    background-color:#8eb8dfd0;
+    text-align: center;
 }
