--- a/css/loja.css
+++ b/css/loja.css
@@ -25,6 +25,8 @@
     margin: 0 auto;
     padding:0 2%;
     display: flex;
+    flex-wrap: wrap;
+    
 }
 
 #carrinho{
@@ -34,25 +36,51 @@
     display: block;
 }
 
-.produto-sigle{
+.produto-single{
     width: 32%;
     margin-right: 1%;
     border: 1px solid #ccc;
-    margin: 20px 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.produto-sigle img{
+.produto-single img{
     max-width: 100%;
+    padding-left: 8%;
 }
 
-h1{
-    font-weight: 700;
-    font-size: 2.3em;
+.produto-single p{
+    text-align: center;
+    font-size: 16px;
+    padding: 10px;
+    
+}
+
+.produto-single a{
+    text-decoration: none;
+    color: white;
     background-color: #6ea3dae3;
     text-align: center;
+    display: block;
+    padding: 8px 0;
 }
 
 h2{
     background-color:#8eb8dfd0;
     text-align: center;
+}
+
+.info-single-checkout{
+    border-bottom: 2px dotted;
+    padding: 10px 0;
+}
+
+
+
+
+@media screen and (max-width:768px){
+    .produto-single{
+        width: 100%;
+        margin-right: 0;
+    }
 }
