--- a/css/loja.css
+++ b/css/loja.css
@@ -7,6 +7,7 @@
 
 #setainicio{
     text-decoration: none;
+
 }
 
 #setainicio img{
@@ -14,6 +15,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2%;
+    padding-top: 20px;
 }
 
 #setainicio img:hover{
