--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h1 {
     font-weight: 400;
     font-style: normal;
     font-size: 30px;
-    text-align: left;
+    text-align: justify;
 }
         
 #inicio table tr td img{
